assets/css/sass/partials/_header.scss
// Partial: Header

.header {
    padding: 59px 15px 15px;
    height: 153px;
    background: #fff;
    position: relative;
    z-index: 100;

    @media #{$screen-xs} {
        &.instance-header {
            height: 100px;
            transition: margin-top 400ms cubic-bezier(0, 0, 0.1, 1)
        }
    }

    &:before {
        content: '';
        display: inline-block;
        height: 100%;
        vertical-align: middle;
        margin-right: -0.25em;
    }

    .embed & {
        padding-top: 0;
    }
}

.embed .instance-header {
    @media #{$screen-gtxs} {
        height: 98px;
    }
}

.logo {
    display: inline-block;
    vertical-align: middle;
    position: relative;

    img {
        max-width: 300px;
        max-height: 78px;
    }
}

.instance-header .logo {
    @media #{$screen-ltmd} {
        display: none;
    }
}

.toolbar-wrapper {
    position: absolute;
    top: 60px;
    display: inline-block;
}

.search-wrapper {
    position: absolute;
    right: 15px;
    top: 60px;

    @media #{$screen-ltmd} {
        left: 15px;
    }
    @media #{$screen-xs} {
        top: $navbar-height;
        left: 10px;
        right: 10px;
    }
    @media #{$screen-gtxs} {
        .embed & {
            top: 15px;
        }
    }
}

.search-block-wrapper {
    display: inline-block;

    @media #{$screen-ltmd} {
        width: calc(100% - #{$search-button-group-width + 16px});
    }
    .search-block {
        padding: 12px 0;
        float: left;
        margin-left: 10px;
        width: 245px;

        @media #{$screen-ltmd} {
            width: calc(50% - 10px);
        }
        @media #{$screen-xs} {
            width: 100%;
            margin-left: 0;
        }
        label {
            display: block;
            margin-top: -2px;
        }
        .dropdown-menu {
            width: 257px;
            border-radius: 3px;

            > li > a {
                padding: 3px 12px;
            }
        }
    }
}

.search-options {
    float: right;

    #perform-search {
        margin-top: 2px;
        padding: 5px 0;
    }

    .btn-group {
        width: 100%;
    }

    @media #{$screen-gtxs} {
        #search-advanced.filter-active {
            font-weight: bold;
            color: $secondary-color;
        }
    }
    @media #{$screen-gtsm} {
        margin-left: 15px;
    }
    @media #{$screen-xs} {
        padding: 12px 0;
        width: $mobile-search-button-group-width;
        text-align: center;

        .btn-group {
            width: auto;
        }

        #search-advanced {
            color: $primary-color;
            border: none;
            background: none;
            width: auto;
            height: 35px;
            text-transform: uppercase;
            font-weight: 500;
            font-size: 1.2rem;
            padding: 0;
            transition: opacity 0.1s;
            transition-delay: 0.2s;

            i {
                display: none;
            }
            .text {
                display: block;
                white-space: nowrap;
                overflow: hidden;
            }
        }
        #search-reset, #perform-search {
            display: none;
        }
        .filter-active + #search-reset, .simple-filter-active + #search-reset {
            display: block;
            color: $primary-color;
            border: none;
            background: none;
            width: auto;
            height: 35px;
            text-transform: uppercase;
            font-size: 1.2rem;
            padding: 0;
            padding-left: 15px;
            transition: opacity 0.1s;
            transition-delay: 0.2s;
        }
    }

    .btn-default {

        &:hover,
        &:focus,
        &:active, &.active {
            box-shadow: none;
            background: darken($button-default, 5%);
            border-color: darken($button-default, 15%);
        }
    }
}

@media #{$screen-xs} {
    .header {
        .search-block-wrapper {
            width: calc(100% - #{$mobile-search-button-group-width});
        }
        &:not(.expanded) {
            &.collapsed {
                .search-block-wrapper {
                    transition: width 0.2s;
                    transition-delay: 0s;
                }
            }
            .search-block {
                .typeahead-toggle {
                    display: none;
                }
                > label {
                    display: none;
                }
                .autocomplete-group .twitter-typeahead input[type="text"] {
                    padding-left: 8px;
                    border-top-right-radius: 0;
                    border-bottom-right-radius: 0;
                    width: calc(100% - 40px);
                }
                .search-button {
                    position: absolute;
                    right: 0;
                    top: 0;
                    border-top-left-radius: 0;
                    border-bottom-left-radius: 0;
                    width: 40px;
                    display: block;
                }
            }
            .species-search-block {
                display: none;
            }
            .search-block-wrapper {
                &:after {
                    content: '...';
                    opacity: 0;
                    font-size: 2rem;
                    float: right;
                    margin-top: 10px;
                    margin-right: -30px;
                    transition: opacity 0.1s;
                    transition-delay: 0s;
                }
            }
            .search-wrapper.typeahead-active {
                .search-block-wrapper {
                    width: calc(100% - 30px);
                    transition-delay: 0.1s;

                    &:after {
                        opacity: 1;
                        transition-delay: 0.2s;
                    }
                }
                #search-advanced {
                    opacity: 0;
                    transition-delay: 0s;
                    z-index: -1;
                }
                .simple-filter-active + #search-reset, .filter-active + #search-reset {
                    opacity: 0;
                    transition-delay: 0s;
                    z-index: -1;
                }
            }
            #search-advanced {
                &.filter-active, &.simple-filter-active {
                    font-weight: 700;

                    &:before {
                        content: '';
                        display: block;
                        position: absolute;
                        width: 6px;
                        height: 6px;
                        background: $secondary-color;
                        border-radius: 100%;
                        left: -10px;
                        top: 15px;
                    }
                }
            }
        }
    }
    .expanded {
        .search-block-wrapper {
            position: absolute;
            top: 60px;
            width: 100%;

            .search-block {
                label, .field-group-message {
                    color: lighten($primary-color, 45%);
                }
            }
        }
        .search-options {
            width: calc(100% + 20px);
            left: -10px;
            position: absolute;
            float: none;
            margin: 0;
            padding: 12px 15px;
            background: #fff;
            z-index: 10;
            top: 0;

            &.fixed {
                position: fixed;
                width: 100%;
                left: 0;
            }
            #search-advanced {
                float: right;
                width: 30px;

                .text {
                    opacity: 0;
                }
                i {
                    display: block;
                    position: absolute;
                    right: -8px;
                    top: 1px;
                    font-size: 2rem;
                }
            }
            .btn-group {
                width: 100%;
            }
            #search-reset, #perform-search {
                display: block;
                position: absolute;
                font-size: 1.6rem;
                width: calc(50% - 28px);
                margin: 0;
                padding: 5px 0;
                line-height: 1.333333;
            }
            #search-reset {
                border-radius: 6px 0 0 6px;
            }
            #perform-search {
                top: 12px;
                left: calc(50% - 28px);
                border-radius: 0 6px 6px 0;
            }
        }
    }
}

.additional-searches {
    padding: 8px;
    border-bottom: 1px solid #eee;
    width: 100%;
}

.udfc {
    right: 0;
}

// Disabled links get wrapped in labels, and we need to override
// the styling for them to behave like an anchor tag
.btn-group > label {
    position: relative;
    float: left;

    &:first-child {
        margin-left: 0;

        &:not(:last-child) > .btn:not(.dropdown-toggle) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0
        }
    }
}
.dropdown-menu li > label {
    display: block;
    clear: both;

    > a {
        padding: 3px 20px;
        font-weight: normal;
        line-height: 1.42857143;
        color: #333;
    }
}

